Fixed scrollbars in chrome

--- a/interventie2/static/css/styles.css
+++ b/interventie2/static/css/styles.css
@@ -450,7 +450,8 @@ footer {
     display: flex;
     box-sizing: border-box;
     flex-flow: row;
-    overflow: scroll;
+    overflow-x: auto;
+    overflow-y: hidden;
     gap: 1rem;
     padding-bottom: 2rem;    
 }
